--- a/src/locales/th/htp.json
+++ b/src/locales/th/htp.json
@@ -1,51 +1,52 @@
 {
     "introduction": {
-        "title": "แนะนำเกม",
-        "content": "Dragon Tiger Wild เป็นเกมล่าสุดจาก IDNLIVE Europe ที่คุณจะได้สัมผัสประสบการณ์ใหม่ที่สนุกและตื่นเต้น หากคุณคุ้นเคยกับเกม Dragon Tiger แล้ว ในเกมใหม่นี้ เราได้เพิ่มส่วนประกอบใหม่ด้วย wild card ที่จะทำให้คุณได้รับรางวัลที่สูงขึ้นอย่างมาก มาเล่นให้ wild กันเถอะ!!!"
+        "title": "แนะนำ",
+        "content": "Dragon Tiger Wild เป็นเกมใหม่ล่าสุดจาก IDNLIVE EUROPE ที่มอบความตื่นเต้นยิ่งขึ้นด้วยการเพิ่ม <b>การ์ดไวลด์</b> เกมนี้มอบประสบการณ์ใหม่ให้กับแฟน ๆ Dragon Tiger พร้อมโอกาสชนะที่ยอดเยี่ยมถึง <b>127 เท่า! LET’S GET WILD!!!</b>"
     },
     "game-objective": {
         "title": "วัตถุประสงค์ของเกม",
-        "content": "วัตถุประสงค์ใน Dragon Tiger Wild คือการทายไพ่ที่สูงที่สุดและทาย wild card ให้ถูกต้องเพื่อให้รางวัลของคุณสูงขึ้น"
+        "content": "เป้าหมายของเกมนี้คือการทายไพ่ที่สูงที่สุดระหว่างมังกรและเสือ และใช้การ์ดไวลด์เพื่อสร้างชุดโบนัสไวลด์เพื่อรับรางวัลใหญ่ยิ่งขึ้น"
     },
     "rules": {
         "title": "กฎทั่วไป",
         "steps": [
-            "เกมนี้จะถูกดำเนินการโดยดีลเลอร์หรือผู้ดูแลเกม",
-            "เกมนี้ใช้ไพ่ทั้งหมด 8 สำรับใน 1 'Shoe'",
-            "เมื่อเริ่มต้น 'Shoe' ใหม่ ดีลเลอร์จะจั่วไพ่ 1 ใบเพื่อกำหนดจำนวนไพ่ที่ต้อง 'Burn' หรือทิ้งใน 'Shoe' นั้น ไพ่ Ace มีค่าเท่ากับ 1 ไพ่ 2 ถึง 10 มีค่าเท่ากับตัวเลขบนไพ่ และไพ่รูป (Jack, Queen, King) มีค่าเท่ากับ 10 ดังนั้น 'Shoe' จะทิ้งไพ่ได้สูงสุด 10 ใบ",
-            "ค่าไพ่ใน Dragon Tiger Wild:",
-            "- Ace = 1",
-            "- 2 ถึง 10 = ตามหน้าไพ่",
-            "- Jack, Queen, King = 11, 12, 13",
-            "เมื่อเวลาวางเดิมพันหมดลง ทุกการเดิมพันจะถูกยอมรับโดยอัตโนมัติ",
-            "ดีลเลอร์จะจั่วไพ่ 1 ใบเป็น Wild Card แล้วแจกไพ่ให้ทั้งฝั่งมังกรและเสือ 1 ใบ",
-            "ฝั่งที่มีค่าไพ่สูงสุดจะเป็นผู้ชนะ ค่าที่สูงสุดคือ King (13)",
-            "หากเกิดผลเสมอ หรือ Tie การเดิมพันที่มังกรและเสือจะได้รับเงินคืนครึ่งหนึ่ง การเดิมพัน Tie จะชนะก็ต่อเมื่อค่าไพ่ของมังกรและเสือเท่ากัน"
+            "เกมนี้ดำเนินการโดยดีลเลอร์",
+            "เกมนี้ใช้ไพ่ 8 สำรับในหนึ่ง <i>Shoe</i>",
+            "ในแต่ละ <i>Shoe</i> ใหม่ ดีลเลอร์จะจั่วไพ่หนึ่งใบเพื่อกำหนดจำนวนไพ่ที่จะ <i>เผา</i> หรือทิ้ง โดยสามารถทิ้งได้สูงสุด 10 ใบ",
+            "เมื่อเวลาวางเดิมพันหมดลง ดีลเลอร์จะเปิดเผยไพ่ไวลด์หนึ่งใบ แล้วแจกไพ่ให้มังกรและเสือฝ่ายละหนึ่งใบ",
+            "ฝ่ายที่มีค่าสูงสุดจะเป็นผู้ชนะ ไพ่ที่มีค่าสูงสุดคือ K ซึ่งมีค่าเท่ากับ 13",
+            "หากผลลัพธ์ <b>เสมอ</b> การเดิมพันมังกรและเสือจะคืนครึ่งหนึ่ง การเดิมพันเสมอจะชนะก็ต่อเมื่อมังกรและเสือมีค่าเท่ากัน"
         ]
     },
+    "dragon-tiger-wild-card": {
+        "title": "การ์ด Dragon Tiger Wild",
+        "content": "Dragon Tiger Wild ใช้สำรับไพ่มาตรฐาน 52 ใบ ไม่มีโจ๊กเกอร์ นี่คือมูลค่าของไพ่ที่ใช้ในเกม:",
+        "card": "การ์ด",
+        "value": "มูลค่า"
+    },
     "wild-card-bet": {
-        "title": "การเดิมพัน Wild Card",
-        "description": "ตามที่กล่าวในบทนำ เกมนี้มีการเพิ่มองค์ประกอบใหม่และโบนัสที่น่าตื่นเต้น โดยมีรายละเอียดดังนี้",
-        "description-2": "Wild card จะเป็นตัวกำหนดผลชนะโดยให้รางวัลที่สูงกว่าเดิมพันปกติ โดยมีการเดิมพัน Wild ทั้ง 5 รูปแบบที่อธิบายต่อไปนี้",
+        "title": "การเดิมพันการ์ดไวลด์",
+        "description": "ดังที่ได้กล่าวไว้ในการแนะนำ Dragon Tiger Wild มีองค์ประกอบการเล่นเกมใหม่และโบนัสที่น่าตื่นเต้น นี่คือคำอธิบาย:",
+        "description-2": "การ์ดไวลด์จะกำหนดการชนะด้วยรางวัลที่มากกว่าการเดิมพันปกติ มีการเดิมพันไวลด์ 5 ประเภท:",
         "dragon-wild": {
-            "title": "มังกร Wild",
-            "content": "การเดิมพันมังกร Wild คือการเดิมพันมังกร แต่ถ้าฝั่งมังกรชนะและค่าไพ่ตรงกับ Wild card คุณจะชนะเดิมพันนี้"
+            "title": "มังกรไวลด์",
+            "content": "การเดิมพันนี้จะชนะหากไพ่มังกร <b>ชนะ</b> และมูลค่าเท่ากับไพ่ไวลด์"
         },
         "tiger-wild": {
-            "title": "เสือ Wild",
-            "content": "การเดิมพันเสือ Wild คือการเดิมพันเสือ แต่ถ้าฝั่งเสือชนะและค่าไพ่ตรงกับ Wild card คุณจะชนะเดิมพันนี้"
+            "title": "เสือไวลด์",
+            "content": "การเดิมพันนี้จะชนะหากไพ่เสือ <b>ชนะ</b> และมูลค่าเท่ากับไพ่ไวลด์"
         },
         "super-wild": {
-            "title": "Super Wild",
-            "content": "การเดิมพัน Super Wild คือการเดิมพัน Tie แต่ถ้าผลออกมาเสมอและค่าไพ่ของ Wild card ตรงกับค่าไพ่ของมังกรและเสือ คุณจะชนะเดิมพันนี้"
+            "title": "ซุปเปอร์ไวลด์",
+            "content": "การเดิมพันนี้จะชนะหากไพ่มังกร ไพ่เสือ และไพ่ไวลด์มีมูลค่า <b>เท่ากัน</b>"
         },
         "dragon-pair": {
-            "title": "Pair มังกร",
-            "content": "การเดิมพัน Pair มังกร คือการเดิมพันแบบคู่ปกติ แต่ถ้าค่าไพ่ของมังกรและ Wild card ตรงกัน คุณจะชนะเดิมพันนี้"
+            "title": "คู่มังกร",
+            "content": "การเดิมพันนี้จะชนะหากไพ่มังกรและไพ่ไวลด์มีมูลค่า <b>เท่ากัน</b> (ไพ่มังกรไม่จำเป็นต้องชนะ)"
         },
         "tiger-pair": {
-            "title": "Pair เสือ",
-            "content": "การเดิมพัน Pair เสือ คือการเดิมพันแบบคู่ปกติ แต่ถ้าค่าไพ่ของเสือและ Wild card ตรงกัน คุณจะชนะเดิมพันนี้"
+            "title": "คู่เสือ",
+            "content": "การเดิมพันนี้จะชนะหากไพ่เสือและไพ่ไวลด์มีมูลค่า <b>เท่ากัน</b> (ไพ่เสือไม่จำเป็นต้องชนะ)"
         }
     },
     "bet-description-and-example": {
@@ -54,50 +55,50 @@
         "examples": "ตัวอย่าง",
         "anything": "อะไรก็ได้",
         "main-bet": {
-            "title": "เดิมพันหลัก",
-            "heading": "เดิมพันหลัก",
+            "title": "การเดิมพันหลัก",
+            "heading": "การเดิมพันหลัก",
             "examples": "ตัวอย่าง",
             "description": "คำอธิบาย",
             "table": {
                 "dragon": {
                     "title": "มังกร",
-                    "description": "จ่ายเมื่อค่าของมังกรสูงกว่าค่าของเสือ"
+                    "description": "จ่ายเมื่อมูลค่าไพ่มังกร <b>มากกว่า</b> มูลค่าไพ่เสือ"
                 },
                 "tiger": {
                     "title": "เสือ",
-                    "description": "จ่ายเมื่อค่าของเสือสูงกว่าค่าของมังกร"
+                    "description": "จ่ายเมื่อมูลค่าไพ่เสือ <b>มากกว่า</b> มูลค่าไพ่มังกร"
                 },
                 "tie": {
                     "title": "เสมอ",
-                    "description": "จ่ายเมื่อการ์ดของมังกรและเสือมีค่าเท่ากัน"
+                    "description": "จ่ายเมื่อไพ่มังกรและเสือมี <b>มูลค่าเท่ากัน</b>"
                 }
             }
         },
         "side-bet": {
-            "title": "การเดิมพันข้างเคียง",
-            "heading": "การเดิมพันข้างเคียง",
+            "title": "การเดิมพันเสริม",
+            "heading": "การเดิมพันเสริม",
             "examples": "ตัวอย่าง",
             "description": "คำอธิบาย",
             "table": {
                 "dragon-wild": {
-                    "title": "มังกร Wild",
-                    "description": "จ่ายเมื่อฝั่งมังกรชนะและค่าไพ่ของมังกรและ Wild card ตรงกัน"
+                    "title": "มังกรไวลด์",
+                    "description": "จ่ายเมื่อฝ่ายมังกร <b>ชนะ</b> และมูลค่าของไพ่มังกรและการ์ดไวลด์ <b>เท่ากัน</b>"
                 },
                 "tiger-wild": {
-                    "title": "เสือ Wild",
-                    "description": "จ่ายเมื่อฝั่งเสือชนะและค่าไพ่ของเสือและ Wild card ตรงกัน"
+                    "title": "เสือไวลด์",
+                    "description": "จ่ายเมื่อฝ่ายเสือ <b>ชนะ</b> และมูลค่าของไพ่เสือและการ์ดไวลด์ <b>เท่ากัน</b>"
                 },
                 "super-wild": {
-                    "title": "Super Wild",
-                    "description": "จ่ายเมื่อค่าไพ่ของมังกร เสือ และ Wild card ตรงกัน"
+                    "title": "ซุปเปอร์ไวลด์",
+                    "description": "จ่ายเมื่อมูลค่าไพ่มังกร เสือ และไวลด์ <b>เท่ากัน</b>"
                 },
                 "dragon-pair": {
-                    "title": "Pair มังกร",
-                    "description": "จ่ายเมื่อค่าไพ่ของมังกรและ Wild card ตรงกัน"
+                    "title": "คู่มังกร",
+                    "description": "จ่ายเมื่อมูลค่าไพ่มังกรและการ์ดไวลด์ <b>เท่ากัน</b>"
                 },
                 "tiger-pair": {
-                    "title": "Pair เสือ",
-                    "description": "จ่ายเมื่อค่าไพ่ของเสือและ Wild card ตรงกัน"
+                    "title": "คู่เสือ",
+                    "description": "จ่ายเมื่อมูลค่าไพ่เสือและการ์ดไวลด์ <b>เท่ากัน</b>"
                 }
             }
         }
