--- a/src/locales/ko/htp.json
+++ b/src/locales/ko/htp.json
@@ -1,51 +1,52 @@
 {
     "introduction": {
         "title": "소개",
-        "content": "Dragon Tiger Wild는 IDNLIVE Europe의 최신 게임으로, Dragon Tiger에 익숙한 사람이라면 새로운 흥미롭고 재미있는 경험을 제공할 것입니다. 이 새로운 게임에서는 wild 카드 요소가 추가되어 보상이 훨씬 더 커집니다. Let's get wild!!!"
+        "content": "Dragon Tiger Wild는 IDNLIVE EUROPE의 최신 게임으로, <b>와일드 카드</b>가 추가되어 더 큰 흥미를 제공합니다. Dragon Tiger 팬들에게 새로운 경험을 선사하며, 최대 <b>127배의</b> 환상적인 승리 기회를 제공합니다! LET’S GET WILD!!!"
     },
     "game-objective": {
         "title": "게임 목표",
-        "content": "Dragon Tiger Wild의 목표는 가장 높은 카드를 맞추고 wild 카드를 정확하게 예측하여 보상을 더욱 크게 만드는 것입니다."
+        "content": "이 게임의 목표는 드래곤과 타이거 중 높은 카드를 예측하고, 와일드 카드를 활용하여 더 큰 승리 보상을 위한 와일드 보너스 조합을 만드는 것입니다."
     },
     "rules": {
         "title": "일반 규칙",
         "steps": [
-            "이 게임은 딜러가 진행합니다.",
-            "이 게임은 8개의 카드 덱을 사용합니다.",
-            "새로운 'Shoe'가 시작될 때, 딜러가 1장을 뽑아 얼마나 많은 카드가 'Burn' 또는 폐기될지 결정합니다. Ace는 1로, 2에서 10까지는 카드에 적힌 값으로, 얼굴 카드(Jack, Queen, King)는 10으로 계산됩니다. 따라서 각 'Shoe'는 최대 10장의 카드만 폐기됩니다.",
-            "Dragon Tiger Wild에서 카드 값:",
-            "- Ace = 1",
-            "- 2에서 10 = 카드 값",
-            "- Jack, Queen, King = 11, 12, 13",
-            "베팅 시간이 끝나면 모든 베팅이 자동으로 수락됩니다.",
-            "딜러는 1장을 Wild 카드로 뽑고, 드래곤과 타이거에 각각 1장씩 카드를 줍니다.",
-            "높은 값을 가진 쪽이 승자가 됩니다. 가장 높은 값은 King (13)입니다.",
-            "비기거나 Tie가 되면 드래곤과 타이거의 베팅이 반으로 반환됩니다. Tie 베팅은 드래곤과 타이거 카드가 동일할 때만 승리합니다."
+            "딜러가 게임을 진행합니다.",
+            "이 게임은 한 <i>Shoe</i>에 8벌의 카드를 사용합니다.",
+            "새로운 <i>Shoe</i>의 시작마다, 딜러는 몇 장의 카드를 <i>버닝</i>할지 결정하는 카드를 한 장 뽑습니다. 최대 10장까지 버릴 수 있습니다.",
+            "베팅 시간이 끝나면 딜러가 와일드 카드를 한 장 공개한 후, 드래곤과 타이거에게 각각 한 장의 카드를 배분합니다.",
+            "가장 높은 값을 가진 쪽이 승리합니다. 가장 높은 카드는 킹(K)이며, 값은 13입니다.",
+            "결과가 <b>무승부</b>일 경우, 드래곤과 타이거 베팅 금액의 절반이 반환됩니다. 드래곤과 타이거가 같은 값을 가질 경우에만 무승부 베팅이 승리합니다."
         ]
     },
+    "dragon-tiger-wild-card": {
+        "title": "드래곤 타이거 와일드 카드",
+        "content": "드래곤 타이거 와일드는 조커가 없는 52장의 표준 덱을 사용합니다. 게임에서 사용되는 카드 값은 다음과 같습니다:",
+        "card": "카드",
+        "value": "값"
+    },
     "wild-card-bet": {
-        "title": "WILD 카드 베팅",
-        "description": "소개에서 언급했듯이, 이 게임은 새로운 게임 플레이와 흥미로운 보너스를 도입했습니다. 아래는 그 설명입니다.",
-        "description-2": "Wild 카드는 일반 베팅보다 훨씬 더 큰 보상을 결정하는 중요한 역할을 합니다. 다음은 5가지 wild 베팅에 대한 설명입니다.",
+        "title": "와일드 카드 베팅",
+        "description": "소개에서 언급한 바와 같이, 드래곤 타이거 와일드는 새로운 게임 요소와 흥미로운 보너스를 포함하고 있습니다. 다음은 설명입니다:",
+        "description-2": "와일드 카드는 일반 베팅보다 더 큰 보상으로 승리를 결정합니다. 5가지 종류의 와일드 베팅이 있습니다:",
         "dragon-wild": {
-            "title": "드래곤 Wild",
-            "content": "드래곤 Wild 베팅은 기본적으로 드래곤 베팅과 같지만, 드래곤이 이기고 카드 값이 Wild 카드와 일치하면 이 베팅에 승리합니다."
+            "title": "드래곤 와일드",
+            "content": "이 베팅은 드래곤 카드가 <b>승리</b>하고 그 값이 와일드 카드와 <b>같을 때</b> 승리합니다."
         },
         "tiger-wild": {
-            "title": "타이거 Wild",
-            "content": "타이거 Wild 베팅은 기본적으로 타이거 베팅과 같지만, 타이거가 이기고 카드 값이 Wild 카드와 일치하면 이 베팅에 승리합니다."
+            "title": "타이거 와일드",
+            "content": "이 베팅은 타이거 카드가 <b>승리</b>하고 그 값이 와일드 카드와 <b>같을 때</b> 승리합니다."
         },
         "super-wild": {
-            "title": "슈퍼 Wild",
-            "content": "슈퍼 Wild 베팅은 기본적으로 Tie 베팅과 같지만, 결과가 Tie이고 Wild 카드가 드래곤과 타이거 카드 값과 일치하면 이 베팅에 승리합니다."
+            "title": "슈퍼 와일드",
+            "content": "이 베팅은 와일드 카드, 드래곤 카드, 타이거 카드의 값이 <b>동일할 때</b> 승리합니다."
         },
         "dragon-pair": {
             "title": "드래곤 페어",
-            "content": "드래곤 페어 베팅은 일반 페어 베팅과 같지만, 드래곤 카드 값과 Wild 카드가 일치하면 이 베팅에 승리합니다."
+            "content": "이 베팅은 드래곤 카드와 와일드 카드의 값이 <b>같을 때</b> 승리합니다. (드래곤 카드가 반드시 승리할 필요는 없습니다.)"
         },
         "tiger-pair": {
             "title": "타이거 페어",
-            "content": "타이거 페어 베팅은 일반 페어 베팅과 같지만, 타이거 카드 값과 Wild 카드가 일치하면 이 베팅에 승리합니다."
+            "content": "이 베팅은 타이거 카드와 와일드 카드의 값이 <b>같을 때</b> 승리합니다. (타이거 카드가 반드시 승리할 필요는 없습니다.)"
         }
     },
     "bet-description-and-example": {
@@ -60,16 +61,16 @@
             "description": "설명",
             "table": {
                 "dragon": {
-                    "title": "용",
-                    "description": "용의 값이 호랑이보다 클 경우 지급됩니다."
+                    "title": "드래곤",
+                    "description": "드래곤 카드의 값이 타이거 카드보다 <b>높으면</b> 승리합니다."
                 },
                 "tiger": {
-                    "title": "호랑이",
-                    "description": "호랑이의 값이 용보다 클 경우 지급됩니다."
+                    "title": "타이거",
+                    "description": "타이거 카드의 값이 드래곤 카드보다 <b>높으면</b> 승리합니다."
                 },
                 "tie": {
                     "title": "무승부",
-                    "description": "용과 호랑이 카드의 값이 동일할 경우 지급됩니다."
+                    "description": "드래곤과 타이거 카드의 값이 <b>동일할 때</b> 승리합니다."
                 }
             }
         },
@@ -80,30 +81,30 @@
             "description": "설명",
             "table": {
                 "dragon-wild": {
-                    "title": "드래곤 Wild",
-                    "description": "드래곤이 이기고 드래곤 카드 값과 Wild 카드가 일치하면 지불됩니다."
+                    "title": "드래곤 와일드",
+                    "description": "드래곤이 <b>승리</b>하고 드래곤 카드와 와일드 카드의 값이 <b>같을 때</b> 승리합니다."
                 },
                 "tiger-wild": {
-                    "title": "타이거 Wild",
-                    "description": "타이거가 이기고 타이거 카드 값과 Wild 카드가 일치하면 지불됩니다."
+                    "title": "타이거 와일드",
+                    "description": "타이거가 <b>승리</b>하고 타이거 카드와 와일드 카드의 값이 <b>같을 때</b> 승리합니다."
                 },
                 "super-wild": {
-                    "title": "슈퍼 Wild",
-                    "description": "드래곤, 타이거, Wild 카드 값이 모두 일치하면 지불됩니다."
+                    "title": "슈퍼 와일드",
+                    "description": "드래곤, 타이거, 와일드 카드의 값이 모두 <b>동일할 때</b> 승리합니다."
                 },
                 "dragon-pair": {
                     "title": "드래곤 페어",
-                    "description": "드래곤 카드 값과 Wild 카드가 일치하면 지불됩니다."
+                    "description": "드래곤 카드와 와일드 카드의 값이 <b>동일할 때</b> 승리합니다."
                 },
                 "tiger-pair": {
                     "title": "타이거 페어",
-                    "description": "타이거 카드 값과 Wild 카드가 일치하면 지불됩니다."
+                    "description": "타이거 카드와 와일드 카드의 값이 <b>동일할 때</b> 승리합니다."
                 }
             }
         }
     },
     "payout": {
-        "title": "지급",
+        "title": "지불금",
         "bet-payout": "베팅 지불금"
     }
 }
