--- a/src/locales/zh/common.json
+++ b/src/locales/zh/common.json
@@ -57,5 +57,6 @@
     "features": "功能",
     "shuffling-cards": "洗牌",
     "complete-how-to-play": "完整的游戏指南",
-    "dont-show-again": "不再显示"
+    "dont-show-again": "不再显示",
+    "streaming-error": "流媒体错误：无效的流媒体 url"
 }
