--- a/src/locales/vn/common.json
+++ b/src/locales/vn/common.json
@@ -57,5 +57,6 @@
     "features": "tính năng",
     "shuffling-cards": "xào bài",
     "complete-how-to-play": "Hướng dẫn chơi",
-    "dont-show-again": "Tắt hiển thị"
+    "dont-show-again": "Tắt hiển thị",
+    "streaming-error": "lỗi phát trực tuyến: url phát trực tuyến không hợp lệ"
 }
