update card bet description

--- a/src/locales/en/htp.json
+++ b/src/locales/en/htp.json
@@ -53,7 +53,7 @@
         "title": "Bet Description and Examples",
         "description": "Description",
         "examples": "Examples",
-        "anything": "Anything",
+        "anything": "Any",
         "main-bet": {
             "title": "MAIN BET",
             "heading": "MAIN BET",
