update bold mini how to play

--- a/src/locales/th/mini-htp.json
+++ b/src/locales/th/mini-htp.json
@@ -2,22 +2,22 @@
     "slide-1": {
         "title": "วิธีการเล่น",
         "content": [
-            "Dragon Tiger Wild มาพร้อมกับโบนัส WILD CARD ล่าสุด! เพิ่มโอกาสในการชนะของคุณสูงสุดถึง 127 เท่า!",
-            "คุณเพียงแค่ทายว่าฝ่ายใดจะได้ไพ่ที่สูงที่สุดและทายไพ่ wild เพื่อรับรางวัลที่ใหญ่ขึ้น! LET'S GET WILD!!!"
+            "Dragon Tiger Wild มาพร้อมกับโบนัส <b>WILD CARD</b> ล่าสุด! เพิ่มโอกาสชนะของคุณได้มากถึง <b>127 เท่า!</b>",
+            "เพียงแค่ทายไพ่ที่สูงที่สุดและไพ่ wild เพื่อรับรางวัลใหญ่กว่า! <b>LET'S GET WILD!!!</b>"
         ]
     },
     "slide-2": {
         "title": "วิธีการเล่น",
         "content": [
-            "เกมนี้เล่นด้วยไพ่ 3 ใบ โดยมีไพ่หลัก 2 ใบ (Dragon และ Tiger) แข่งขันกันว่าไพ่ฝั่งไหนมีแต้มสูงกว่า และไพ่ wild 1 ใบจะถูกจั่วเพื่อสร้างชุดโบนัส Wild",
-            "คุณสามารถเดิมพันได้ที่การเดิมพันหลัก: Dragon/Tiger หรือชุดการเดิมพัน Wild: Dragon Wild, Dragon Pair หรือ Tiger Wild, Tiger Pair และ Super Wild"
+            "เกมนี้เล่นด้วยไพ่ 3 ใบ ไพ่หลัก 2 ใบ (Dragon และ Tiger) <b>จะประชันกันเพื่อดูว่าใครมีค่าไพ่สูงกว่า</b> ไพ่ wild 1 ใบถูกจั่วเพื่อสร้างชุดโบนัส Wild",
+            "คุณสามารถเดิมพันในการเดิมพันหลัก: Dragon/Tiger หรือในชุดการเดิมพัน Wild: Dragon Wild, Dragon Pair หรือ Tiger Wild, Tiger Pair และ Super Wild"
         ]
     },
     "slide-3": {
         "title": "โบนัส Wild",
         "content": [
-            "ไพ่ wild จะมาสร้างชุดโบนัสที่สามารถเพิ่มการจ่ายเงินรางวัลของคุณอย่างมหาศาลได้ถึง 127 เท่า!",
-            "วางเดิมพันที่ชุด wild และลุ้นรับโอกาสโบนัส WILD หลายเท่าตัว!"
+            "ไพ่ wild ปรากฏขึ้นเพื่อสร้างชุดโบนัสที่สามารถเพิ่มการจ่ายเงินของคุณได้มากถึง <b>127 เท่า!</b>",
+            "วางเดิมพันในชุด wild และคว้าโอกาส <b>โบนัส WILD หลายเท่า!</b>"
         ]
     }
 }
