--- a/src/locales/vn/mini-htp.json
+++ b/src/locales/vn/mini-htp.json
@@ -2,22 +2,22 @@
     "slide-1": {
         "title": "Cách Chơi",
         "content": [
-            "Dragon Tiger Wild đi kèm với bonus WILD CARD mới nhất! Tăng cơ hội chiến thắng của bạn lên đến 127 lần!",
-            "Bạn chỉ cần đoán thẻ cao nhất và thẻ wild để nhận các phần thưởng lớn hơn! LET'S GET WILD!!!"
+            "Dragon Tiger Wild đi kèm với bonus <b>WILD CARD</b> mới nhất! Tăng cơ hội chiến thắng của bạn lên đến <b>127 lần!</b>",
+            "Chỉ cần đoán thẻ cao nhất và thẻ wild để nhận các phần thưởng lớn hơn! <b>LET'S GET WILD!!!</b>"
         ]
     },
     "slide-2": {
         "title": "Cách Chơi",
         "content": [
-            "Trò chơi này chơi với 3 lá bài. 2 lá bài chính (Dragon và Tiger) sẽ cạnh tranh xem bên nào có giá trị cao hơn. 1 lá bài wild được rút ra để tạo thành kết hợp Bonus Wild.",
-            "Bạn có thể đặt cược vào các cược chính: Dragon/Tiger, hoặc vào các kết hợp cược wild: Dragon Wild, Dragon Pair hoặc Tiger Wild, Tiger Pair và Super Wild."
+            "Trò chơi này chơi với 3 lá bài. 2 lá bài chính (Dragon và Tiger) <b>cạnh tranh để xem bên nào có giá trị cao nhất.</b> 1 lá bài wild được rút ra để tạo thành một kết hợp bonus Wild.",
+            "Bạn có thể đặt cược vào các cược chính: Dragon/Tiger, hoặc vào các kết hợp cược wild: Dragon Wild, Dragon Pair, hoặc Tiger Wild, Tiger Pair và Super Wild."
         ]
     },
     "slide-3": {
         "title": "Bonus Wild",
         "content": [
-            "Thẻ wild xuất hiện để tạo ra các kết hợp bonus có thể tăng đáng kể tiền thắng cược của bạn lên đến 127 lần!",
-            "Đặt cược vào các kết hợp wild và giành cơ hội nhận nhiều lần BONUS WILD!"
+            "Thẻ wild xuất hiện để tạo ra các kết hợp bonus có thể tăng đáng kể số tiền thắng lên đến <b>127 lần!</b>",
+            "Đặt cược vào các kết hợp wild và giành cơ hội nhận <b>nhiều lần BONUS WILD!</b>"
         ]
     }
 }
