--- a/src/locales/zh/mini-htp.json
+++ b/src/locales/zh/mini-htp.json
@@ -2,22 +2,22 @@
     "slide-1": {
         "title": "玩法介绍",
         "content": [
-            "Dragon Tiger Wild 带来了最新的 WILD CARD 奖金！赢取高达127倍的机会！",
-            "您只需猜测最高的牌和 wild 牌，即可赢取更大奖励！LET'S GET WILD!!!"
+            "Dragon Tiger Wild 带来了最新的 <b>WILD CARD</b> 奖金！赢取高达 <b>127倍</b> 的胜利机会！",
+            "只需猜测最高的牌和 wild 牌，即可赢取更大奖励！<b>LET'S GET WILD!!!</b>"
         ]
     },
     "slide-2": {
         "title": "玩法介绍",
         "content": [
-            "此游戏使用3张牌进行。2张主要牌（龙和虎）将比拼哪一方牌值更高。1张 wild 牌将被抽出以形成 Wild 奖金组合。",
-            "您可以投注主要投注：龙/虎，或者 wild 组合投注：龙 wild、龙对，或者虎 wild、虎对，以及超级 wild。"
+            "此游戏使用3张牌进行。2张主要牌（龙和虎）<b>比拼哪一方拥有更高的点数。</b> 1张wild牌被抽出以形成Wild奖金组合。",
+            "您可以投注于主要投注：龙/虎，或wild组合投注：龙wild，龙对，虎wild，虎对和超级wild。"
         ]
     },
     "slide-3": {
         "title": "Wild 奖金",
         "content": [
-            "wild 牌出现以形成奖金组合，可将您的奖金提高至127倍！",
-            "投注 wild 组合，抓住多次 WILD 奖金的机会！"
+            "wild 牌出现以形成可将您的奖金大幅提高至 <b>127倍</b> 的奖金组合！",
+            "投注wild组合，抓住<b>多次WILD 奖金</b>的机会！"
         ]
     }
 }
