--- a/src/locales/en/mini-htp.json
+++ b/src/locales/en/mini-htp.json
@@ -2,22 +2,22 @@
     "slide-1": {
         "title": "How to Play",
         "content": [
-            "Dragon Tiger Wild comes with the latest WILD CARD bonus! Get a bigger chance to win up to 127x!",
-            "You just need to guess the highest card and the wild card for even bigger prizes! LET'S GET WILD!!!"
+            "Dragon Tiger Wild arrives with the latest <b>WILD CARD</b> bonus! Get a bigger chance to win up to <b>127x!</b>",
+            "Simply guess the highest card and the wild card for even bigger prizes! <b>LET'S GET WILD!!!</b>"
         ]
     },
     "slide-2": {
         "title": "How to Play",
         "content": [
-            "This game is played with 3 cards. The 2 main cards (Dragon and Tiger) will compete to see which side has the highest value. 1 wild card is drawn to form a Wild Bonus combination.",
+            "This game is played with 3 cards. The 2 main cards (Dragon and Tiger) <b>compete to see which side has the highest value.</b> 1 wild card is drawn to form a Wild Bonus combination.",
             "You can bet on the Main Bets: Dragon/Tiger, or on Wild Bet combinations: Dragon Wild, Dragon Pair, or Tiger Wild, Tiger Pair, and Super Wild."
         ]
     },
     "slide-3": {
         "title": "Wild Bonus",
         "content": [
-            "The wild card appears to create bonus combinations that can drastically increase your winnings up to 127x!",
-            "Place your bets on wild combinations and seize the chance for multiple WILD BONUS payouts!"
+            "The wild card appears to form bonus combinations that can drastically increase your winnings up to <b>127x!</b>",
+            "Bet on wild combinations and seize the chance for <b>MULTIPLE WILD BONUSES!</b>"
         ]
     }
 }
